--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "path": "^0.12.7",
+    "serve-favicon": "^2.5.0",
     "winston": "^2.4.0",
     "winston-daily-rotate-file": "^1.7.2"
   },
