--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "arraywrap": "^1.0.0",
     "async": "^2.6.0",
     "body-parser": "^1.18.2",
+    "connect-timeout": "^1.9.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
