--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "arraywrap": "^1.0.0",
     "async": "^2.6.0",
     "body-parser": "^1.18.2",
+    "cluster": "^0.7.7",
     "connect-timeout": "^1.9.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
@@ -16,6 +17,7 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
+    "os": "^0.1.1",
     "path": "^0.12.7",
     "serve-favicon": "^2.5.0",
     "winston": "^2.4.0",
