--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "async": "^2.6.0",
     "body-parser": "^1.18.2",
     "cluster": "^0.7.7",
+    "connect-redis": "^3.3.3",
     "connect-timeout": "^1.9.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
