--- a/package.json
+++ b/package.json
@@ -19,10 +19,7 @@
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "os": "^0.1.1",
-    "path": "^0.12.7",
-    "serve-favicon": "^2.5.0",
-    "winston": "^2.4.0",
-    "winston-daily-rotate-file": "^1.7.2"
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "scripts": {
