--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,5 @@ views/
 node_modules/
 routes/test.js
 key.json
-public/main_img/**
-!public/main_img/.gitkeep
-public/club_img/**
-!public/club_img/.gitkeep
+public/**
+!public/.gitkeep
